k8s/presentation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-presentation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-presentation
  namespace: project-presentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-presentation
  template:
    metadata:
      labels:
        app: project-presentation
    spec:
      nodeSelector:
        kubernetes.io/hostname: cloud2007-control-plane
      tolerations:
        - operator: Exists
          effect: NoSchedule
      containers:
        - name: web
          image: project-presentation:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: project-presentation
  namespace: project-presentation
spec:
  selector:
    app: project-presentation
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-presentation
  namespace: project-presentation
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: project.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-presentation
                port:
                  number: 80
